@@ -27,6 +27,7 @@
         * [BUGFIX]: Fixed FormView row navigation shortcuts.
         * [BUGFIX]: #3097 Fixed alphabetical ordering when exporting entire database.
         * [BUGFIX]: Fixed "UPDATE OF" column list formatting (indentation) in Enterprise Formater plugin.
+        * [BUGFIX]: Fixed SqlSimpleFormatter plugin to add ";" at the end of CREATE TABLE statements while exporting database schema to SQL format.
         * [BUGFIX]: Data view fonts now apply to other tabs in the table window and view window.
         * [BUGFIX]: Compilation fixes.
 
